Fix token gaps

--- a/compass/src/App.scss
+++ b/compass/src/App.scss
@@ -22,13 +22,14 @@
 }
 
 .y-fd-token {
-  margin-top: fd-space("tiny") / 2;
-  margin-bottom: fd-space("tiny") / 2;
-  margin-right: fd-space("tiny");
   &.y-fd-token--no-button {
     cursor: default;
     &:after {
       all: unset;
     }
+  }
+
+  &.y-fd-token--gap:not(:last-of-type) {
+    margin-right: 8px;
   }
 }
